# reminder

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  api_check.py  build.sh  call_ai.py  environment.yml  main.py  models.py  package_management.txt  pylintrc  pyproject.toml  requirements.txt  run.sh
app/: actions.py  main.py  models.py
app/db/: database.py
app/db/sql/: initial_setup.sql  run_sql_commands.py  user_table_setup.sql
bland_ai_wrapper/: __init__.py  wrapper.py
test/: api_check.py  test_api_sanity_test.py  test_register_reminder.py
using_open_ai/: .env  main.py  openai_test.py  voice_2_mp4.py
