[tool.poetry]
name = "reminder"
version = "1.0.0"
description = "Reminder app"
authors = ["Hansu Lee <bunnybrewery@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.5"
httpx = "^0.27.2"
fastapi = "^0.115.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
