[tool.poetry]
name = "reminder"
version = "1.0.0"
description = "Reminder app"
authors = ["Hansu Lee <bunnybrewery@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
fastapi = "^0.115.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.0"
mem0ai = "^0.1.19"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
